--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,14 @@ ipywidgets>=8.0.0
 python-dotenv>=1.0.0
 argparse>=1.4.0
 
+# API & Deployment
+Flask>=2.3.0
+Flask-CORS>=4.0.0
+gunicorn>=20.1.0
+requests>=2.31.0
+onnx>=1.14.0
+onnxruntime>=1.15.0
+
 # Medical AI Specific
 monai>=1.2.0  # Medical Open Network for AI (optional but useful)
 
